[package]
name = "brmq"
authors = ["Capad"]
description = "brmq is a lightweight Message Queue via HTTPS Rest API"
version = "0.1.0"
rust-version="1.58"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.3", features = ["openssl"] }
env_logger = "0.9.0"
log = "0.4.14"
openssl = { version = "0.10.38" }
moka = {version = "0.7.1", features = ["future"]}
futures = "0.3.19"
openssl-probe = "0.1.5"